# SpecWeave

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  AGENTS.en.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  check_mermaid.py  pytest.ini
.agents/: ONBOARDING.md  README.md  VENDOR-INTEGRATION.md  capability-boundaries.md  capability-registry.md  context-routing.md  global-core-rules.md
.agents/brand/: header-sketch.html
.agents/capabilities/: ARCHITECTURE.md  ONBOARDING-TEMPLATE.md  README.md  REGISTRY-TEMPLATE.md
.agents/capability-registry/: 01-scripts.md  (+3 more)
.githooks/: WINDOWS-SETUP.md  pre-commit  setup-hooks.py
.meta/: README.md
apps/: README.md
apps/ai-code-assistant/: .env.example  .gitignore  README.md  app.py  pyproject.toml
apps/ai-code-assistant/modules/: code_explainer.py  learning_path.py  qa_engine.py
apps/ai-code-assistant/templates/: index.html
docs/: README.md  _config.toml  agent-roles.md  collaboration.md  conf.py  development-standards.md  index.md  knowledge-base.md  methodology-analysis-report.md  project-highlights.md  project-overview.md  project-structure.md  raci-governance-standards.md  related-links.md  requirements.txt  reuse-and-generalization.md  roadmap.md  tasks.py  tech-stack.md  trae-project-adaptation-guide.md  verification-automation.md
projects/: README.md
prompt_extraction/: config.py  models.py  pipeline.py  requirements.txt
reports/: code-review-checklist.md  security-remediation-checklist.md  sensitive-info-audit-report.json  sensitive-info-sanitization-report.md
(+11711 files in other folders)
